# PI-BackeEnd-DjangoDRF

./: README.md  build.sh  isort.cfg  pyproject.toml  requirements.txt
core/: settings.py  urls.py
student/: admin.py
student/migrations/: 0001_initial.py  0002_grades.py
student/models/: __init__.py
student/models/grades/: grades.py
student/models/student/: student.py
student/serializeres/: __init__.py
student/serializeres/grades/: grades.py
student/serializeres/student/: student.py
student/views/: __init__.py
student/views/grades/: grades.py
student/views/student/: student.py
